IDEA inspection refactorings.